--- a/SnapMob_Backend/SnapMob_Backend.csproj
+++ b/SnapMob_Backend/SnapMob_Backend.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\PaymentDTOs\" />
+  </ItemGroup>
+
 </Project>
